# promograph

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
backend/: config.py
backend/api/: app.py  events.py  session.py
backend/data_gen/: duck.py  generate.py
backend/forecasting/: features.py  predict.py  train_lgbm.py
backend/genie_clients/: base.py  databricks.py  mock.py
backend/gnn/: build_pyg.py  train_graphsage.py
backend/graph_store/: base.py  build_edges.py  driver.py  duck_store.py  etl_duckdb_to_neo4j.py  neo4j_store.py  schema.cypher
backend/llm/: client.py
backend/orchestrator/: demo.py  loop.py  prompts.py  tools.py
backend/pricing_agent/: optimize.py
data/: lgbm_lift.meta.json
data/etl/: databricks_to_duckdb.py
docs/: architecture.md  schema.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/graph/: GraphPanel.tsx
frontend/src/lib/: api.ts  events.ts  graph.ts
tests/: test_pipeline.py
