[project]
name = "promograph"
version = "0.1.0"
description = "Promograph - Graph-Steered Conversational Trade Promotion Optimization, a fully open-source $0 stack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # --- API / backend ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # --- LLM (OpenAI SDK pointed at Ollama's OpenAI-compatible endpoint) ---
    "openai>=1.54",
    # --- data layer ---
    "duckdb>=1.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=17.0",
    # --- graph ---
    "neo4j>=5.24",
    # --- forecasting / ml ---
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    # --- databricks (real Genie + SQL connector; free libs) ---
    "databricks-sql-connector>=3.4",
]

[project.optional-dependencies]
# GNN deps are heavier; keep separate so the core installs fast on a laptop.
# On CPU: pip install torch --index-url https://download.pytorch.org/whl/cpu first.
gnn = [
    "torch>=2.2",
    "torch-geometric>=2.6",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
